Созданы google карточки для новостей

--- a/XamarinGuy/XamarinGuy/MainPage.xaml
+++ b/XamarinGuy/XamarinGuy/MainPage.xaml
@@ -7,12 +7,12 @@
     <Shell.FlyoutHeader>
         <local:HeaderContentView></local:HeaderContentView>
     </Shell.FlyoutHeader>
-    <FlyoutItem Title="MyTabApp" Shell.TabBarIsVisible="False"
-                FlyoutDisplayOptions="AsMultipleItems">
-        <ShellContent Title="Bears" Icon="ic_action_beach_access.png" IsTabStop="true" ContentTemplate="{DataTemplate local:Page1}"></ShellContent>
+    <FlyoutItem Title="MyTabApp" Shell.TabBarIsVisible="False" FlyoutDisplayOptions="AsMultipleItems">
+        <ShellContent Title="Bears"     Icon="ic_action_beach_access.png" IsTabStop="true" ContentTemplate="{DataTemplate local:Page1}"></ShellContent>
         <ShellContent Title="Elephants" Icon="ic_action_desktop_mac.png" IsTabStop="true" ContentTemplate="{DataTemplate local:Page2}"></ShellContent>
-        <ShellContent Title="Humans" Icon="ic_humans.png" IsTabStop="true" ContentTemplate="{DataTemplate local:HumanPage}"></ShellContent>
-        <ShellContent Title="StarWars" IsTabStop="True" ContentTemplate="{DataTemplate local:StarWarsPage}"></ShellContent>
+        <ShellContent Title="Humans"    Icon="ic_humans.png" IsTabStop="true" ContentTemplate="{DataTemplate local:HumanPage}"></ShellContent>
+        <ShellContent Title="StarWars"   IsTabStop="True" ContentTemplate="{DataTemplate local:StarWarsPage}"></ShellContent>
+        <ShellContent Title="GoogleCard" IsTabStop="True" ContentTemplate="{DataTemplate local:CardNewsPage}"></ShellContent>
     </FlyoutItem>
     <ShellContent Title="About" Icon="ic_action_beach_access.png" ContentTemplate="{DataTemplate local:Page1}"></ShellContent>
     
